--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Gatti di marmo
+description: Se sei riesci a ciapare dei ratt probabilmente non dovresti essere qui
