--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
 title: Gatti di marmo
 description: Se sei riesci a ciapare dei ratt probabilmente non dovresti essere qui
+
+insert: Passo_1
