--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,6 @@ theme: jekyll-theme-minimal
 title: Gatti di marmo
 description: Se sei riesci a ciapare dei ratt probabilmente non dovresti essere qui
 
-insert: Passo_1.md
+exclude:
+  - README.md
+  
