--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ theme: jekyll-theme-minimal
 title: Gatti di marmo
 description: Se sei riesci a ciapare dei ratt probabilmente non dovresti essere qui
 
-#exclude:
- # - README.md
+exclude:
+ - README.md
   
 include:
 - Index.md
